2010-07-29  Alan Modra  <amodra@gmail.com>

	* config/tc-ppc.c (ppc_fix_adjustable): Add got reloc types used
	in large toc code.

2010-07-28  Alan Modra  <amodra@gmail.com>

	PR gas/11841
	* symbols.c (symbol_clone): Correct typo in previous patch.

2010-07-28  Alan Modra  <amodra@gmail.com>

	PR gas/11841
	* symbols.c (symbol_clone): Clear BSF_SECTION_SYM flag.

2010-07-28  Alan Modra  <amodra@gmail.com>

	* config/tc-ppc.c (md_assemble): Don't attempt to print NUL in
	syntax error message.

2010-07-27  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips16_macro_build): Pass "args" by
	reference rather than value.
	(macro_build): Update accordingly.

2010-07-27  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips_ip): Use symbol_temp_new_now to create
	a fake label.

2010-07-24  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro)[M_JAL_1, M_JAL_2]: Handle the JALR
	delay slot in the noreorder mode with the o32 ABI.

2010-07-23  Naveen.H.S  <naveen.S@kpitcummins.com>
	    Ina Pandit  <ina.pandit@kpitcummins.com>

	* config/tc-v850.c: Update processor_mask.
	(reg_name): Update the structure to use processors field.
	(md_relax_table): Define SUBYPTE_COND_9_22, SUBYPTE_SA_9_22,
	SUBYPTE_UNCOND_9_22, SUBYPTE_COND_9_22_32, SUBYPTE_SA_9_22_32,
	SUBYPTE_UNCOND_9_22_32, SUBYPTE_COND_9_17_22,
	SUBYPTE_SA_9_17_22, SUBYPTE_COND_9_17_22_32 and
	SUBYPTE_SA_9_17_22_32.
	(set_machine): Add support for V850E2 and V850E2V3.
	(md_pseudo_table): Likewise.
	(pre_defined_registers): Update pre defined registers suitable
	for each family of registers.
	(system_registers): Likewise.
	(cc_names): Update the condition code.
	(float_cc_names): Update the condition code for float.
	(reg_name_search): Update based on current modifications.
	(register_name): Likewise.
	(system_register_name): Update to support new system registers
	and supported families.
	(cc_name): Update to support new condition codes.