@@ -1,3 +1,7 @@
+2010-07-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386-intel.c: Reformat.
+
 2010-07-29  Alan Modra  <amodra@gmail.com>
 
 	* config/tc-ppc.c (ppc_fix_adjustable): Add got reloc types used
